--- a/deliverd.html
+++ b/deliverd.html
@@ -53,10 +53,10 @@
                                 <div class="left-site d-flex justify-content-between">
                                     <div class="status">
                                         <li>01</li>
-                                        <div>
-                                            <p class="processing mx-auto">
+                                       <div>
+                                            <p class="deliverd mx-auto">
                                             </p>
-                                            <p>Processing</p>
+                                            <p>deliverd</p>
                                         </div>
                                     </div>
                                     <div class="name">
@@ -157,9 +157,9 @@
                                     <div class="status">
                                         <li>02</li>
                                         <div>
-                                            <p class="Confirmed mx-auto">
+                                            <p class="deliverd mx-auto">
                                             </p>
-                                            <p>Confirmed</p>
+                                            <p>deliverd</p>
                                         </div>
                                     </div>
                                     <div class="name">
@@ -258,10 +258,10 @@
                                 <div class="left-site d-flex justify-content-between">
                                     <div class="status">
                                         <li>03</li>
-                                        <div>
-                                            <p class="Cancelled mx-auto">
+                                       <div>
+                                            <p class="deliverd mx-auto">
                                             </p>
-                                            <p>Cancelled</p>
+                                            <p>deliverd</p>
                                         </div>
                                     </div>
                                     <div class="name">
@@ -351,23 +351,29 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+
+                <div>
+                    <h4 class="text-secondary my-4 mx-4">last week</h4>
+                </div>
+                  <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseFour" aria-expanded="false"
-                            aria-controls="flush-collapseFour">
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+
                             <div class="heading d-flex justify-content-between">
                                 <div class="left-site d-flex justify-content-between">
                                     <div class="status">
                                         <li>04</li>
                                         <div>
-                                            <p class="Pending mx-auto">
+                                           <div>
+                                            <p class="deliverd mx-auto">
                                             </p>
-                                            <p>Pending</p>
+                                            <p>deliverd</p>
+                                        </div>
                                         </div>
                                     </div>
                                     <div class="name">
-                                        <h5>Amin sobuj</h5>
+                                        <h5>Md didher Ahmed</h5>
                                     </div>
                                     <div class="date">
                                         <p>21-sep-2023</p>
@@ -384,9 +390,10 @@
                                     <span>1,350.00</span>
                                 </div>
                             </div>
+
                         </button>
                     </h2>
-                    <div id="flush-collapseFour" class="accordion-collapse collapse"
+                    <div id="flush-collapseOne" class="accordion-collapse collapse"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <div class="order-details d-flex justify-content-between">
@@ -398,14 +405,15 @@
                                         </div>
                                         <div class="product-title-and-quantity">
                                             <h6>
-                                                Skmei 1864 Ch - Gold</h6>
+                                                Skmei 1864 Ch - Silver</h6>
                                             <div>
-                                                <span class="Price"> ৳ 1,950.00 </span>
+                                                <span class="Price"> ৳ 1,350.00 </span>
                                                 <span class="quantity">x 1</span>
-                                                <div class="total">total: ৳ 1,950.00</div>
+                                                <div class="total">total: ৳ 1,350.00</div>
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="text-center mt-5">
                                         <h6> Skmei Showroom Pickup</h6>
                                         <h5><span>৳</span> 0.00</h5>
@@ -415,12 +423,12 @@
                                 <div class="delivery-address">
                                     <div class="lg-sm">
                                         <h5>Billing Address</h5>
-                                        <p>Ruhul Amin sobuj</p>
+                                        <p>Md didher Ahmed</p>
                                         <li class="">30 no bonugram road wari old Dhaka</li>
                                     </div><br>
                                     <div class="email">
                                         <li class="fw-semibold">E-mail</li>
-                                        <a href="">RuhulAminsobu@gmail.com</a>
+                                        <a href="">mddidher5@gmail.com</a>
                                     </div><br>
                                     <div class="teliphone">
                                         <li class="fw-semibold">Telephone</li>
@@ -428,7 +436,7 @@
                                     </div><br>
                                     <div class="Shipping">
                                         <h6 class="fw-semibold">Shipping Address</h6>
-                                        <p>Ruhul Amin sobu</p>
+                                        <p>Md didher Ahmed</p>
                                         <li>30 no bonugram road wari old Dhaka</li>
                                     </div>
                                 </div>
@@ -456,20 +464,121 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseFive" aria-expanded="false"
-                            aria-controls="flush-collapseFive">
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             <div class="heading d-flex justify-content-between">
                                 <div class="left-site d-flex justify-content-between">
                                     <div class="status">
                                         <li>05</li>
                                         <div>
-                                            <p class="Pending mx-auto">
+                                            <p class="deliverd mx-auto">
                                             </p>
-                                            <p>Pending</p>
+                                            <p>deliverd</p>
                                         </div>
                                     </div>
                                     <div class="name">
-                                        <h5>Rahim Gazi</h5>
+                                        <h5>Firoz Ahmed</h5>
+                                    </div>
+                                    <div class="date">
+                                        <p>21-sep-2023</p>
+                                        <p>Cash on Delivery</p>
+                                    </div>
+                                    <div class="product shadow p-2">
+                                        <img src="./SKMEI-Fashion-Men-Watch-Creativty-Digital-Watch-3Bar-Waterproof-Stereoscopic-Dial-Stainless-Steel-12-24-Hour.jpg_640x640-2-150x150.jpg"
+                                            alt="product">
+                                    </div>
+
+                                </div>
+                                <div class="right-site">
+                                    <span>৳</span>
+                                    <span>1,350.00</span>
+                                </div>
+                            </div>
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <div class="order-details d-flex justify-content-between">
+                                <div class="product-quantity">
+                                    <div class="d-flex">
+                                        <div class="">
+                                            <img src="./SKMEI-Fashion-Men-Watch-Creativty-Digital-Watch-3Bar-Waterproof-Stereoscopic-Dial-Stainless-Steel-12-24-Hour.jpg_640x640-2-150x150.jpg"
+                                                alt="product">
+                                        </div>
+                                        <div class="product-title-and-quantity">
+                                            <h6>
+                                                Skmei 1864 Ch - black</h6>
+                                            <div>
+                                                <span class="Price"> ৳ 1,650.00 </span>
+                                                <span class="quantity">x 1</span>
+                                                <div class="total">total: ৳ 1,650.00</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="text-center mt-5">
+                                        <h6> Skmei Showroom Pickup</h6>
+                                        <h5><span>৳</span> 0.00</h5>
+
+                                    </div>
+                                </div>
+                                <div class="delivery-address">
+                                    <div class="lg-sm">
+                                        <h5>Billing Address</h5>
+                                        <p>Firoz Ahmed</p>
+                                        <li class="">30 no bonugram road wari old Dhaka</li>
+                                    </div><br>
+                                    <div class="email">
+                                        <li class="fw-semibold">E-mail</li>
+                                        <a href="">mddidher5@gmail.com</a>
+                                    </div><br>
+                                    <div class="teliphone">
+                                        <li class="fw-semibold">Telephone</li>
+                                        <a href="">01646287203</a>
+                                    </div><br>
+                                    <div class="Shipping">
+                                        <h6 class="fw-semibold">Shipping Address</h6>
+                                        <p>Md didher Ahmed</p>
+                                        <li>30 no bonugram road wari old Dhaka</li>
+                                    </div>
+                                </div>
+                                <div class="status-select">
+                                    <p class="fw-semibold">Order Status</p>
+
+                                    <div class="OrderStatus-buttons">
+                                        <button>Rufund Request</button>
+                                        <button>In Stock</button>
+                                        <button>Pending Payment</button>
+                                        <button>Processing</button>
+                                        <button>Confirmed</button>
+                                        <button>In Trasit</button>
+                                        <button>Deliverd</button>
+                                        <button>Return</button>
+                                        <button>Report Issue</button>
+                                        <button>Cancelled</button>
+                                        <button class="bg-danger text-white">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            <div class="heading d-flex justify-content-between">
+                                <div class="left-site d-flex justify-content-between">
+                                    <div class="status">
+                                        <li>06</li>
+                                        <div>
+                                            <p class="deliverd mx-auto">
+                                            </p>
+                                            <p>deliverd</p>
+                                        </div>
+                                    </div>
+                                    <div class="name">
+                                        <h5>Ruhul Amin sobuj</h5>
                                     </div>
                                     <div class="date">
                                         <p>21-sep-2023</p>
@@ -488,7 +597,7 @@
                             </div>
                         </button>
                     </h2>
-                    <div id="flush-collapseFive" class="accordion-collapse collapse"
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <div class="order-details d-flex justify-content-between">
@@ -576,7 +685,7 @@
         </ul>
     </nav>
     </div>
-    </section>
+    </div>
 
 
 
